--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=error
 
 DB_CONNECTION=mysql
-DB_HOST=${RAILWAY_VOLUME_MOUNT_PATH}/mysql
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=${RAILWAY_DB_DATABASE}
-DB_USERNAME=${RAILWAY_DB_USERNAME}
-DB_PASSWORD=${RAILWAY_DB_PASSWORD}
+DB_DATABASE=railway
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
