--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Greek
 APP_ENV=production
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=${RAILWAY_PUBLIC_DOMAIN}
 
 LOG_CHANNEL=stack
