--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@ APP_NAME=Greek
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
-APP_URL=${RAILWAY_PUBLIC_DOMAIN}
+APP_URL=https://greek-production.up.railway.app
 
 LOG_CHANNEL=stack
 LOG_LEVEL=error
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
 DB_DATABASE=railway
 DB_USERNAME=root
@@ -19,5 +19,4 @@ SESSION_LIFETIME=120
 
 QUEUE_CONNECTION=database
 CACHE_STORE=database
-
 FILESYSTEM_DISK=public
